Fixed gap

--- a/packages/mod/src/plugins/friend-alerts/index.css
+++ b/packages/mod/src/plugins/friend-alerts/index.css
@@ -79,6 +79,7 @@
     align-items: center;
     padding: 8px 0;
     border-bottom: 1px solid #40444b;
+    gap: 10px
 }
 
 .vx-fa-item:last-child {
